--- a/module/Landing/view/landing/landing/index.phtml
+++ b/module/Landing/view/landing/landing/index.phtml
@@ -1,5 +1,5 @@
-<!--<input id="requestUriRegulated" type="hidden"  value="<?php echo $this->requestUriRegulated; ?>"></input>
-<input id="langCode" type="hidden"  value="<?php echo $this->langCode; ?>"></input>-->
+<input id="requestUriRegulated" type="hidden"  value="<?php echo $this->requestUriRegulated; ?>"></input>
+<input id="langCode" type="hidden"  value="<?php echo $this->langCode; ?>"></input>
 
 <div id="wrapper">
 
